--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 FRONTEND_URL=http://localhost:3000  # Add this line
 # ... rest of your existing variables
 PORT=5000
-MONGO_URI=mongodb+srv://novasoleofficial:mak68742723@cluster0.nax9kmd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://novasoleofficial:mak68742723@clusterx.boq9ypj.mongodb.net/
 JWT_SECRET=your_strong_secret_here_32+_characters
 JWT_EXPIRES_IN=1d
